[package]
name = "polar_oxides"
version = "0.0.1"
authors = ["Matheus Eichelberger <eichelberger@hp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.3", features = ["vulkan", "debug"] }
primes = "0.2.3"
rayon = "1.2.0"

[features]